# cv

./: README.md  pyproject.toml
.dvc/: config
homework_one/: main.py
homework_one/dataset/: train.dvc
homework_one/utils/: compute_iou.py  json2numpy.py
homework_three/: wgan.ipynb
homework_two/: .gitignore  best_model.pth.dvc  cifar_cnn.py
