[tool.poetry]
name = "cv"
version = "1.0.0"
description = "CV homework. Ural Federal Univercity"
authors = ["Vladimir Katin <katin.v.v@gmail.com>"]
license = "GNU"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pandas = "^2.1.4"
opencv-python = "^4.8.1.78"
torch = "^2.1.2"
torchvision = "^0.16.2"
torcheval = "^0.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
